# ComfyUI_Fill-ChatterBox

./: .gitignore  README.md  __init__.py  appearance.js  chatterbox_dialog_node.py  chatterbox_node.py  pyproject.toml  requirements.txt
local_chatterbox/: __init__.py
local_chatterbox/chatterbox/: tts.py  vc.py
web/: appearance.js
