[project]
name = "comfyui_fill-chatterbox"
description = "Voice Clone and TTS model."
version = "1.0.0"
license = "LICENSE"
dependencies = ["diffusers", "librosa", "sounddevice", "glitch_this", "PyOpenGL", "glfw", "scipy>=1.13.1", "requests", "aiohttp", "moviepy", "matplotlib", "reportlab", "openai", "PyPDF2", "pdf2image", "PyMuPDF", "reportlab", "PyPDF2", "ollama", "kornia", "opencv-python", "gdown", "open_clip_torch", "google-genai"]

[project.urls]
Repository = "https://github.com/filliptm/ComfyUI_Fill-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "machinedelusions"
DisplayName = "ComfyUI_Fill-Nodes"
Icon = ""
