[project]
name = "comfyui_fill-chatterbox"
description = "Voice Clone and TTS model."
version = "1.0.1"
license = "LICENSE"
dependencies = ["numpy", "resampy", "librosa", "s3tokenizer", "transformers", "diffusers", "resemble-perth", "omegaconf", "conformer"]

[project.urls]
Repository = "https://github.com/filliptm/ComfyUI_Fill-ChatterBox"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "machinedelusions"
DisplayName = "ComfyUI_Fill-ChatterBox"
Icon = ""
